--- a/in_forward/receiver.conf.tmpl
+++ b/in_forward/receiver.conf.tmpl
@@ -6,7 +6,7 @@
 
 <filter dummer>
   type flowcounter_simple2
-  dump_file_path '/var/log/flunetd_stats/in_forward.json'
+  dump_file_path /var/log/flunetd_stats/in_forward_{{ var "RATE" }}.json
   unit second
 </filter>
 
